# auto_hub

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/audits/: full_audit_report.md  llm_implementations.md  phase_completion_report.md
docs/clients/: claude_desktop.md  cursor.md
examples/: scrape-to-github-pipeline.json
manifests/: projects.yaml
src/auto_hub/: cli.py
src/auto_hub/document/: __init__.py  converter.py  exceptions.py  models.py
src/auto_hub/document/extractors/: base.py  markitdown.py  pymupdf.py
src/auto_hub/document/ocr/: __init__.py  base.py  registry.py  siliconflow.py
src/auto_hub/llm/: __init__.py  adapters.py  client.py  json.py  models.py  provider_chain.py  stats.py
src/auto_hub/mcp/: gateway.py
src/auto_hub/registry/: loader.py  models.py
src/auto_hub/workflow/: __init__.py  models.py  runner.py
tests/: test_cli.py  test_coverage_gaps.py  test_llm_client_gaps.py  test_llm_client_gaps2.py  test_llm_provider_chain.py  test_mcp_gateway.py  test_registry.py  test_workflow.py
tests/document/: test_converter.py  test_exceptions.py  test_extractors.py  test_models.py  test_ocr_engines.py
tests/document/fixtures/: sample.md
