[project]
name = "auto-hub"
version = "0.1.0"
description = "Central coordination layer for auto_* projects"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
    "openai>=1.30.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0",
    "mcp>=1.0.0",
]

[project.scripts]
auto-hub = "auto_hub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/auto_hub"]

[tool.ruff]
extend = "~/.config/ruff/ruff.toml"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10.0",
    "click>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["auto_hub"]

[tool.coverage.report]
fail_under = 85
show_missing = true
